--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "HotelService",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Karthik Reddy",
@@ -11,6 +12,8 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
